--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">3.8"
+click = "^8.1.3"
+questionary = "^1.10.0"
+tqdm = "^4.64.1"
+cython = "^0.29.33"
+nuitka = "^1.4.8"
 
 
 [tool.poetry.group.dev.dependencies]
