--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">3.8"
 click = "^8.1.3"
-questionary = "^1.10.0"
 tqdm = "^4.64.1"
 cython = "^0.29.33"
 nuitka = "^1.4.8"
@@ -22,6 +21,7 @@ pylint = "^2.16.2"
 isort = "^5.12.0"
 pytest-cov = "^4.0.0"
 pre-commit = "^3.1.0"
+ipython = "^8.10.0"
 
 [build-system]
 requires = ["poetry-core"]
