Added test cases for compilers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ line-length = 80
 target-version = ["py38", "py39"]
 
 [tool.isort]
-multi_line_output = 3
 profile = "black"
+multi_line_output = 3
+line_length = 80
 skip = [".gitignore", ".dockerignore" ,".env"]
