--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,21 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">3.8"
-click = "^8.1.3"
-tqdm = "^4.64.1"
-cython = "^0.29.33"
-nuitka = "^1.4.8"
+python = ">3.8"                       # MIT
+click = "^8.1.3"                      # BSD-3-Clause
+tqdm = "^4.64.1"                      # MIT
+cython = "^0.29.33"                   # Apache
+nuitka = "^1.4.8"                     # Apache 2.0
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.1"
-black = "^23.1.0"
-pylint = "^2.16.2"
-isort = "^5.12.0"
-pytest-cov = "^4.0.0"
-pre-commit = "^3.1.0"
-ipython = "^8.10.0"
+pytest = "^7.2.1"                    # MIT
+black = "^23.1.0"                    # MIT
+pylint = "^2.16.2"                   # GPL v2
+isort = "^5.12.0"                    # MIT
+pytest-cov = "^4.0.0"                # MIT
+pre-commit = "^3.1.0"                # MIT
+ipython = "^8.10.0"                  # BSD-3-Clause
 
 [build-system]
 requires = [ "setuptools", "wheel"]
