--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,14 @@
 repos:
-
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
         name: isort (python)
         args: ["--profile", "black", "--filter-files"]
-
   - repo: https://github.com/ambv/black
     rev: 22.12.0
     hooks:
       - id: black
-
   - repo: local
     hooks:
       - id: pytest-check
@@ -20,16 +17,15 @@ repos:
         language: system
         pass_filenames: false
         always_run: true
-
-#  - repo: local
-#    hooks:
-#      - id: pylint
-#        name: pylint
-#        entry: pylint
-#        language: system
-#        types: [ python ]
-#        args:
-#          [
-#            "-rn", # Only display messages
-#            "-sn", # Don't display the score
-#          ]
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [ python ]
+        args:
+          [
+            "-rn", # Only display messages
+            "-sn", # Don't display the score
+          ]
