--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,14 +9,14 @@ repos:
     rev: 22.12.0
     hooks:
       - id: black
-  - repo: local
-    hooks:
-      - id: pytest-check
-        name: pytest-check
-        entry: pytest
-        language: system
-        pass_filenames: false
-        always_run: true
+#  - repo: local
+#    hooks:
+#      - id: pytest-check
+#        name: pytest-check
+#        entry: pytest
+#        language: system
+#        pass_filenames: false
+#        always_run: true
   - repo: local
     hooks:
       - id: pylint
@@ -24,8 +24,10 @@ repos:
         entry: pylint
         language: system
         types: [ python ]
+        pass_filenames: true
+        exclude: ^src/examples/
         args:
           [
-            "-rn", # Only display messages
-            "-sn", # Don't display the score
+            "-rn",
+            "-sn",
           ]
