--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,24 +13,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
            python-version: 3.10.9
+
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
         with:
           poetry-version: 1.3.1
+
       - name: Set Poetry config
-        # Skip creating virtual env
         run: |
              poetry config virtualenvs.create false
+
       - name: Install dependencies
         run: |
             poetry install
+
+      - name: Remove example files
+        run: |
+            rm -rf src/examples
+
       - name: Run test cases
         run: |
             make test
+
       - name: Code Quality
         run: |
             make check
