--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,13 @@ repos:
     hooks:
       - id: black
 
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.4.1
+    hooks:
+      - id: mypy
+        args: [ "--config-file", "pyproject.toml" ]
+        additional_dependencies: [ "types-tqdm", "types-click", "pytest-mypy"]
+
 
   - repo: local
     hooks:
