--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ cython = "^0.29.33"                   # Apache
 nuitka = "^1.4.8"                     # Apache 2.0
 pytest-benchmark = "^4.0.0"           # BSD-2-Clause
 memory-profiler = "^0.61.0"
+types-tqdm = "^4.65.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -27,6 +28,7 @@ isort = "^5.12.0"                    # MIT
 pytest-cov = "^4.0.0"                # MIT
 pre-commit = "^3.1.0"                # MIT
 ipython = "^8.10.0"                  # BSD-3-Clause
+mypy = "^1.4.1"
 
 [build-system]
 requires = [ "setuptools", "wheel"]
@@ -45,6 +47,12 @@ profile = "black"
 multi_line_output = 3
 line_length = 80
 skip = [".gitignore", ".dockerignore" ,".env"]
+
+
+[tool.mypy]
+python_version = "3.10"
+strict_optional = true
+
 
 
 
