--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ isort = "^5.12.0"                    # MIT
 pytest-cov = "^4.0.0"                # MIT
 pre-commit = "^3.1.0"                # MIT
 ipython = "^8.10.0"                  # BSD-3-Clause
-mypy = "^1.4.1"
+mypy = "^1.4.1"                      # MIT
 
 [build-system]
 requires = [ "setuptools", "wheel"]
