--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pre-commit = "^3.1.0"                # MIT
 ipython = "^8.10.0"                  # BSD-3-Clause
 mypy = "^1.4.1"                      # MIT
 types-tqdm = "^4.65.0.1"             # Apache 2.0
+sphinx = "^7.0.1"                    # BSD
 
 [build-system]
 requires = [ "setuptools", "wheel"]
