--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ ipython = "^8.10.0"                  # BSD-3-Clause
 mypy = "^1.4.1"                      # MIT
 types-tqdm = "^4.65.0.1"             # Apache 2.0
 sphinx = "^7.0.1"                    # BSD
+furo = "^2023.5.20"                  # MIT
 
 [build-system]
 requires = [ "setuptools", "wheel"]
