--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ mypy = "^1.4.1"                      # MIT
 types-tqdm = "^4.65.0.1"             # Apache 2.0
 sphinx = "^7.0.1"                    # BSD
 furo = "^2023.5.20"                  # MIT
+myst-parser = "^2.0.0"               # MIT
 
 [build-system]
 requires = [ "setuptools", "wheel"]
