--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">3.8"                       # MIT
+python = ">=3.10"                     # MIT
 click = "^8.1.3"                      # BSD-3-Clause
 tqdm = "^4.64.1"                      # MIT
 cython = "^0.29.33"                   # Apache
