make mypy strict, fix mypy errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ skip = [".gitignore", ".dockerignore" ,".env"]
 [tool.mypy]
 python_version = "3.10"
 strict_optional = true
+strict = true
+
+
 
 
 
