--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,6 +39,14 @@ jobs:
       - name: Code Quality
         run: |
             make check
+
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v2
+        with:
+            name: coverage-reports
+            path: |
+              coverage.xml
+              htmlcov/
   benchmark:
     runs-on: ubuntu-latest
     steps:
