--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Set Artifact URL
         run: |
-          echo "COVERAGE_ARTIFACT_URL=${{ steps.upload.outputs.artifact_url }}" >> $GITHUB_ENV
+          echo "COVERAGE_ARTIFACT_URL=${{ inputs.coverage-artifact-url }}" >> $GITHUB_ENV
   
 
       - name: Code Quality
