--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,12 +10,7 @@ repos:
     hooks:
       - id: black
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.4.1
-    hooks:
-      - id: mypy
-        args: [ "--config-file", "pyproject.toml" ]
-        additional_dependencies: [ "types-tqdm", "types-click", "pytest-mypy"]
+
 
 
   - repo: local
@@ -24,12 +19,21 @@ repos:
         name: pylint
         entry: pylint
         language: system
-        types: [ python ]
+        types: [python]
         files: ^src/
         pass_filenames: true
         exclude: ^src/examples/
         args:
-          [
-            "-rn",
-            "-sn",
-          ]
+          - "-rn"
+          - "-sn"
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: system
+        types: [python]
+        files: ^src/
+        exclude: ^src/examples/
+        args:
+          - "--config-file"
+          - "pyproject.toml"
+          - "--ignore-missing-imports"
