--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "pycompile"
 version = "0.1.10"
 description = "A CLI tool for compiling python"
 authors = ["iplitharas <johnplitharas@gmail.com>"]
+homepage = "https://github.com/iplitharas/pycompile"
+repository = "https://github.com/iplitharas/pycompile"
+documentation = "https://iplitharas.github.io/pycompile/"
 license = "MIT"
 readme = "README.md"
 packages = [
