--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,16 @@ myst-parser = "^2.0.0"               # MIT
 nbsphinx = "^0.9.3"
 sphinx-copybutton = "^0.5.2"
 recommonmark = "^0.7.1"
+commitizen = "^3.12.0"
 
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "semver"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
 [build-system]
 requires = [ "setuptools", "wheel"]
 build-backend = "poetry.core.masonry.api"
