--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ memory-profiler = "^0.61.0"           # BSD
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = ">=7.2.1,<9.0.0"                    # MIT
+pytest = ">=7.2.1,<9.0.0"            # MIT
 black = "^23.1.0"                    # MIT
 pylint = ">=2.16.2,<4.0.0"           # GPL v2
 isort = "^5.12.0"                    # MIT
@@ -35,10 +35,10 @@ types-tqdm = "^4.65.0.1"             # Apache 2.0
 sphinx = "^7.0.1"                    # BSD
 furo = "^2023.5.20"                  # MIT
 myst-parser = "^2.0.0"               # MIT
-nbsphinx = "^0.9.3"
-sphinx-copybutton = "^0.5.2"
-recommonmark = "^0.7.1"
-commitizen = "^3.12.0"
+nbsphinx = "^0.9.3"                  # MIT
+sphinx-copybutton = "^0.5.2"         # MIT
+recommonmark = "^0.7.1"              # MIT
+commitizen = "^3.12.0"               # MIT
 
 
 [tool.commitizen]
@@ -48,6 +48,7 @@ version_scheme = "semver"
 version_provider = "poetry"
 update_changelog_on_bump = true
 major_version_zero = true
+
 [build-system]
 requires = [ "setuptools", "wheel"]
 build-backend = "poetry.core.masonry.api"
